--- a/www-misc/htdig/ChangeLog
+++ b/www-misc/htdig/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-misc/htdig
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-misc/cvs-repo/gentoo-x86/www-misc/htdig/ChangeLog,v 1.21 2007/02/22 00:17:42 jokey Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-misc/cvs-repo/gentoo-x86/www-misc/htdig/ChangeLog,v 1.22 2007/05/01 08:20:32 corsair Exp $
+
+  01 May 2007; Markus Rothe <corsair@gentoo.org>
+  htdig-3.2.0_beta6-r2.ebuild:
+  Added ~ppc64; bug #176620
 
   22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
   Redigest for Manifest2
