--- a/mail-filter/libdomainkeys/ChangeLog
+++ b/mail-filter/libdomainkeys/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-filter/libdomainkeys
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/libdomainkeys/Attic/ChangeLog,v 1.1 2007/04/18 23:02:20 peitolm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/libdomainkeys/Attic/ChangeLog,v 1.2 2007/05/01 09:43:12 armin76 Exp $
+
+  01 May 2007; Raúl Porcel <armin76@gentoo.org>
+  libdomainkeys-0.68-r1.ebuild:
+  Add ~ia64 wrt bug 176487
 
   18 Apr 2007; Colin Morey <peitolm@gentoo.org> ChangeLog:
   Initial commit. to satisfy 71501 as a pre-requisite for 111729
