--- a/dev-java/commons-httpclient/ChangeLog
+++ b/dev-java/commons-httpclient/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/commons-httpclient
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/commons-httpclient/ChangeLog,v 1.40 2007/04/27 12:33:34 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/commons-httpclient/ChangeLog,v 1.41 2007/05/01 12:52:27 corsair Exp $
+
+  01 May 2007; Markus Rothe <corsair@gentoo.org>
+  commons-httpclient-2.0.2-r1.ebuild:
+  Stable on ppc64; bug #176230
 
   27 Apr 2007; Vlastimil Babka <caster@gentoo.org> -files/jikes.diff,
   commons-httpclient-3.0.1.ebuild:
