--- a/sys-libs/libtrash/ChangeLog
+++ b/sys-libs/libtrash/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/libtrash
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/libtrash/ChangeLog,v 1.8 2007/02/09 08:39:11 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/libtrash/ChangeLog,v 1.9 2007/05/01 17:00:08 matsuu Exp $
+
+*libtrash-2.6 (01 May 2007)
+
+  01 May 2007; MATSUU Takuto <matsuu@gentoo.org> +libtrash-2.6.ebuild:
+  Version bumped.
 
   09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
