--- a/net-analyzer/bigeye/ChangeLog
+++ b/net-analyzer/bigeye/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/bigeye
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/bigeye/ChangeLog,v 1.12 2007/02/09 08:03:18 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/bigeye/ChangeLog,v 1.13 2007/05/01 17:42:59 genone Exp $
+
+  01 May 2007; Marius Mauch <genone@gentoo.org> bigeye-0.3-r1.ebuild:
+  Replacing einfo with elog
 
   09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Regenerate digest in Manifest2 format.
