--- a/media-sound/audacity/ChangeLog
+++ b/media-sound/audacity/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/audacity
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/audacity/ChangeLog,v 1.59 2007/05/01 19:51:51 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/audacity/ChangeLog,v 1.60 2007/05/02 11:27:30 armin76 Exp $
+
+  02 May 2007; Raúl Porcel <armin76@gentoo.org> audacity-1.3.2-r1.ebuild:
+  x86 stable wrt #167126
 
   01 May 2007; Markus Rothe <corsair@gentoo.org> audacity-1.3.2-r1.ebuild:
   Stable on ppc64; bug #167126
