--- a/media-video/mplayer/ChangeLog
+++ b/media-video/mplayer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/mplayer
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mplayer/ChangeLog,v 1.481 2007/05/02 11:58:28 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mplayer/ChangeLog,v 1.482 2007/05/02 15:27:35 jer Exp $
+
+  02 May 2007; Jeroen Roovers <jer@gentoo.org> mplayer-1.0.20070321.ebuild:
+  Stable for HPPA (bug #168917).
 
   02 May 2007; Bryan Østergaard <kloeri@gentoo.org>
   mplayer-1.0.20070321.ebuild:
