--- a/app-editors/gvim/ChangeLog
+++ b/app-editors/gvim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/gvim
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/gvim/ChangeLog,v 1.227 2007/05/02 16:16:18 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/gvim/ChangeLog,v 1.228 2007/05/02 16:33:59 corsair Exp $
+
+  02 May 2007; Markus Rothe <corsair@gentoo.org> gvim-7.0.235.ebuild:
+  Stable on ppc64; bug #176464
 
   02 May 2007; Jeroen Roovers <jer@gentoo.org> gvim-7.0.235.ebuild:
   Stable for HPPA (bug #176464).
