--- a/app-editors/vim-core/ChangeLog
+++ b/app-editors/vim-core/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/vim-core
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/vim-core/ChangeLog,v 1.249 2007/05/02 16:14:06 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/vim-core/ChangeLog,v 1.250 2007/05/02 16:30:54 corsair Exp $
+
+  02 May 2007; Markus Rothe <corsair@gentoo.org> vim-core-7.0.235.ebuild:
+  Stable on ppc64; bug #176464
 
   02 May 2007; Jeroen Roovers <jer@gentoo.org> vim-core-7.0.235.ebuild:
   Stable for HPPA (bug #176464).
