--- a/x11-misc/xlockmore/ChangeLog
+++ b/x11-misc/xlockmore/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xlockmore
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xlockmore/ChangeLog,v 1.58 2007/05/02 16:40:30 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xlockmore/ChangeLog,v 1.59 2007/05/02 16:52:39 armin76 Exp $
+
+  02 May 2007; Raúl Porcel <armin76@gentoo.org> ChangeLog:
+  x86 stable wrt #176776
 
   02 May 2007; Markus Rothe <corsair@gentoo.org> xlockmore-5.23-r1.ebuild:
   Stable on ppc64; bug #176776
