--- a/mail-client/claws-mail-rssyl/ChangeLog
+++ b/mail-client/claws-mail-rssyl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/claws-mail-rssyl
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/claws-mail-rssyl/ChangeLog,v 1.7 2007/04/16 13:20:22 ticho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/claws-mail-rssyl/ChangeLog,v 1.8 2007/05/02 19:36:42 corsair Exp $
+
+  02 May 2007; Markus Rothe <corsair@gentoo.org>
+  claws-mail-rssyl-0.12.ebuild:
+  Stable on ppc64; bug #176805
 
 *claws-mail-rssyl-0.12 (16 Apr 2007)
 
