--- a/sys-apps/fakeroot/ChangeLog
+++ b/sys-apps/fakeroot/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/fakeroot
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/fakeroot/ChangeLog,v 1.30 2007/04/09 05:18:11 welp Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/fakeroot/ChangeLog,v 1.31 2007/05/02 21:29:59 vapier Exp $
+
+*fakeroot-1.7 (02 May 2007)
+
+  02 May 2007; Mike Frysinger <vapier@gentoo.org> +fakeroot-1.7.ebuild:
+  Version bump #172278 by Mikko Tiihonen.
 
   09 Apr 2007; Peter Weller <welp@gentoo.org> fakeroot-1.5.10.ebuild:
   Stable on amd64 wrt bug 172158
