--- a/media-gfx/fontforge/ChangeLog
+++ b/media-gfx/fontforge/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/fontforge
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/fontforge/ChangeLog,v 1.48 2007/03/18 21:29:17 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/fontforge/ChangeLog,v 1.49 2007/05/03 00:23:12 vapier Exp $
+
+*fontforge-20070501 (03 May 2007)
+
+  03 May 2007; Mike Frysinger <vapier@gentoo.org>
+  +fontforge-20070501.ebuild:
+  Version bump and add support USE=nls #175450 by Frederik 'Freso' S. Olesen.
 
 *fontforge-20070312 (18 Mar 2007)
 
