--- a/mail-mta/exim/ChangeLog
+++ b/mail-mta/exim/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-mta/exim
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-mta/cvs-repo/gentoo-x86/mail-mta/exim/ChangeLog,v 1.90 2007/05/01 20:06:23 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-mta/cvs-repo/gentoo-x86/mail-mta/exim/ChangeLog,v 1.91 2007/05/03 14:31:39 gustavoz Exp $
+
+  03 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> exim-4.67.ebuild:
+  Keyworded ~sparc wrt #176487
 
   01 May 2007; Markus Rothe <corsair@gentoo.org> exim-4.67.ebuild:
   Added ~ppc64; bug #176487
