--- a/dev-python/matplotlib/ChangeLog
+++ b/dev-python/matplotlib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/matplotlib
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/matplotlib/ChangeLog,v 1.28 2007/03/05 10:43:00 bicatali Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/matplotlib/ChangeLog,v 1.29 2007/05/03 16:43:28 bicatali Exp $
+
+  03 May 2007; Sébastien Fabbro <bicatali@gentoo.org>
+  matplotlib-0.90.0.ebuild:
+  Updated doc version and added examples USE flag
 
   05 Mar 2007; Sébastien Fabbro <bicatali@gentoo.org>
   -files/matplotlib-0.86.2-no-autodetect.patch,
