--- a/app-admin/lsat/ChangeLog
+++ b/app-admin/lsat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/lsat
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/lsat/ChangeLog,v 1.18 2007/05/02 10:43:16 ticho Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/lsat/ChangeLog,v 1.19 2007/05/03 18:28:34 dertobi123 Exp $
+
+  03 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> lsat-0.9.5.ebuild:
+  ppc stable, bug #159542
 
   02 May 2007; Andrej Kacian <ticho@gentoo.org> lsat-0.9.5.ebuild:
   Stable on x86, security bug #159542.
