--- a/x11-misc/xscreensaver/ChangeLog
+++ b/x11-misc/xscreensaver/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xscreensaver
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xscreensaver/ChangeLog,v 1.177 2007/05/03 19:08:49 dertobi123 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xscreensaver/ChangeLog,v 1.178 2007/05/03 20:15:32 armin76 Exp $
+
+  03 May 2007; Raúl Porcel <armin76@gentoo.org> xscreensaver-5.02.ebuild:
+  ia64 + x86 stable wrt bug 176584
 
   03 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
   xscreensaver-5.02.ebuild:
