--- a/dev-util/glade/ChangeLog
+++ b/dev-util/glade/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/glade
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/glade/ChangeLog,v 1.63 2007/03/22 20:48:41 compnerd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/glade/ChangeLog,v 1.64 2007/05/03 20:51:22 compnerd Exp $
+
+*glade-3.2.1 (03 May 2007)
+
+  03 May 2007; Saleem Abdulrasool <compnerd@gentoo.org> +glade-3.2.1.ebuild:
+  Version bump for bug fixes
 
   22 Mar 2007; <compnerd@gentoo.org> -glade-3.1.4.ebuild:
   prune older release
