--- a/sci-chemistry/pymol/ChangeLog
+++ b/sci-chemistry/pymol/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-chemistry/pymol
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/pymol/ChangeLog,v 1.21 2007/05/02 16:52:04 je_fro Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-chemistry/cvs-repo/gentoo-x86/sci-chemistry/pymol/ChangeLog,v 1.22 2007/05/04 15:39:00 je_fro Exp $
+
+  04 May 2007; Jeff Gardner <je_fro@gentoo.org>
+  +files/pymol-0.99_rc8-data-path.patch:
+  Adding the forgotten pymol-0.99_rc8-data-path.patch.
 
 *pymol-0.99_rc8 (02 May 2007)
 
