--- a/dev-java/jaxp/ChangeLog
+++ b/dev-java/jaxp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jaxp
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jaxp/ChangeLog,v 1.6 2007/05/04 18:21:54 nelchael Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jaxp/ChangeLog,v 1.7 2007/05/04 19:29:40 nelchael Exp $
+
+  04 May 2007; Krzysiek Pawlik <nelchael@gentoo.org> files/build.xml-1.4,
+  jaxp-1.4.ebuild:
+  Use repackaged version of distfile.
 
   04 May 2007; Krzysiek Pawlik <nelchael@gentoo.org> jaxp-1.4.ebuild:
   Set JDK/JRE to 1.5, see bug #177069.
