--- a/x11-libs/gtksourceview/ChangeLog
+++ b/x11-libs/gtksourceview/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/gtksourceview
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.91 2007/03/28 02:12:18 dang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/gtksourceview/ChangeLog,v 1.92 2007/05/04 19:53:52 dang Exp $
+
+  04 May 2007; Daniel Gryniewicz <dang@gentoo.org>
+  gtksourceview-1.8.5.ebuild:
+  Remove gnome-vfs dep; bug #177082
 
 *gtksourceview-1.8.5 (28 Mar 2007)
 
