--- a/dev-util/eclipse-sdk/ChangeLog
+++ b/dev-util/eclipse-sdk/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/eclipse-sdk
 # Copyright 2003-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/eclipse-sdk/ChangeLog,v 1.127 2007/04/30 15:56:47 caster Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/eclipse-sdk/ChangeLog,v 1.128 2007/05/04 21:33:37 caster Exp $
+
+  04 May 2007; Vlastimil Babka <caster@gentoo.org>
+  eclipse-sdk-3.2.1-r2.ebuild:
+  Micromanage ant-tasks dep to prevent bug #177079.
 
 *eclipse-sdk-3.2.1-r2 (30 Apr 2007)
 
