--- a/kde-base/kdenetwork/ChangeLog
+++ b/kde-base/kdenetwork/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdenetwork
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdenetwork/Attic/ChangeLog,v 1.258 2007/05/03 16:53:47 philantrop Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdenetwork/Attic/ChangeLog,v 1.259 2007/05/05 05:16:26 jer Exp $
+
+  05 May 2007; Jeroen Roovers <jer@gentoo.org> kdenetwork-3.5.6-r1.ebuild:
+  Marked ~hppa (bug #176926).
 
   03 May 2007; Wulf C. Krueger <philantrop@gentoo.org>
   kdenetwork-3.5.6-r1.ebuild:
