--- a/www-apps/horde-passwd/ChangeLog
+++ b/www-apps/horde-passwd/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for www-apps/horde-passwd
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/horde-passwd/ChangeLog,v 1.12 2007/02/22 00:31:25 jokey Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/horde-passwd/ChangeLog,v 1.13 2007/05/05 07:08:37 vapier Exp $
+
+*horde-passwd-3.0.1 (05 May 2007)
+
+  05 May 2007; Mike Frysinger <vapier@gentoo.org>
+  +horde-passwd-3.0.1.ebuild:
+  Version bump.
 
   22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
   Redigest for Manifest2
