--- a/www-apps/horde-turba/ChangeLog
+++ b/www-apps/horde-turba/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/horde-turba
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/horde-turba/ChangeLog,v 1.26 2007/01/06 23:28:06 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/horde-turba/ChangeLog,v 1.27 2007/05/05 07:03:10 vapier Exp $
+
+*horde-turba-2.1.4 (05 May 2007)
+
+  05 May 2007; Mike Frysinger <vapier@gentoo.org> +horde-turba-2.1.4.ebuild:
+  Version bump.
 
   06 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
   horde-turba-2.1.2.ebuild:
