--- a/sys-apps/debianutils/ChangeLog
+++ b/sys-apps/debianutils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/debianutils
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/debianutils/ChangeLog,v 1.75 2007/05/05 06:08:26 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/debianutils/ChangeLog,v 1.76 2007/05/05 11:08:02 armin76 Exp $
+
+  05 May 2007; Raúl Porcel <armin76@gentoo.org> debianutils-2.18.ebuild:
+  Back to ~arch
 
 *debianutils-2.18 (05 May 2007)
 
