--- a/net-libs/libmrss/ChangeLog
+++ b/net-libs/libmrss/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libmrss
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libmrss/ChangeLog,v 1.6 2007/04/10 21:04:20 rbu Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/libmrss/ChangeLog,v 1.7 2007/05/05 14:53:00 rbu Exp $
+
+*libmrss-0.17.2 (05 May 2007)
+
+  05 May 2007; Robert Buchholz <rbu@gentoo.org> -libmrss-0.17.ebuild,
+  +libmrss-0.17.2.ebuild:
+  Version bump
 
   10 Apr 2007; Robert Buchholz <rbu@gentoo.org> libmrss-0.17.ebuild,
   libmrss-0.17.1.ebuild:
