--- a/net-analyzer/rrdtool/ChangeLog
+++ b/net-analyzer/rrdtool/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/rrdtool
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.118 2007/02/01 14:48:52 jokey Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.119 2007/05/05 15:29:47 cedk Exp $
+
+*rrdtool-1.2.23 (05 May 2007)
+
+  05 May 2007; Cedric Krier <cedk@gentoo.org>
+  +files/rrdtool-1.2.23-tclbindings.patch, +rrdtool-1.2.23.ebuild:
+  Version bump for bug #176899
 
   01 Feb 2007; Markus Ullmann <jokey@gentoo.org>
   +files/rrdtool-1.2.19-as-needed.patch,
