--- a/dev-java/saaj/ChangeLog
+++ b/dev-java/saaj/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/saaj
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/saaj/ChangeLog,v 1.1 2007/05/01 18:37:32 nelchael Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/saaj/ChangeLog,v 1.2 2007/05/05 15:50:04 nelchael Exp $
+
+  05 May 2007; Krzysiek Pawlik <nelchael@gentoo.org> saaj-1.3.ebuild:
+  Move -i to be first option.
 
 *saaj-1.3 (01 May 2007)
 
