--- a/media-sound/mumble/ChangeLog
+++ b/media-sound/mumble/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/mumble
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mumble/ChangeLog,v 1.6 2007/05/01 20:37:52 drizzt Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mumble/ChangeLog,v 1.7 2007/05/05 19:13:10 drizzt Exp $
+
+  05 May 2007; Timothy Redaelli <drizzt@gentoo.org>
+  files/mumble-0.9.4-path.patch, mumble-0.9.4.ebuild:
+  Add vanilla use flag and fixed the patch.
+  Thanks to Mikkel Krautz wrt bug #177167.
 
   01 May 2007; Timothy Redaelli <drizzt@gentoo.org> mumble-0.9.4.ebuild:
   Remove pch use flags since it does not work anymore. Force
