--- a/dev-util/cppunit/ChangeLog
+++ b/dev-util/cppunit/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/cppunit
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cppunit/ChangeLog,v 1.29 2007/05/01 17:17:57 corsair Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cppunit/ChangeLog,v 1.30 2007/05/06 15:01:12 dertobi123 Exp $
+
+  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  cppunit-1.12.0.ebuild:
+  ppc stable, bug #176279
 
   01 May 2007; Markus Rothe <corsair@gentoo.org> cppunit-1.12.0.ebuild:
   Stable on ppc64; bug #176279
