--- a/www-apps/horde-nag/ChangeLog
+++ b/www-apps/horde-nag/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-apps/horde-nag
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/horde-nag/ChangeLog,v 1.20 2007/05/07 04:41:31 jer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-apps/cvs-repo/gentoo-x86/www-apps/horde-nag/ChangeLog,v 1.21 2007/05/07 10:19:35 dertobi123 Exp $
+
+  07 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
+  horde-nag-2.1.2.ebuild:
+  ppc stable, bug #177129
 
   07 May 2007; Jeroen Roovers <jer@gentoo.org> horde-nag-2.1.2.ebuild:
   Stable for HPPA (bug #177129).
