--- a/kde-base/kscd/ChangeLog
+++ b/kde-base/kscd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kscd
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kscd/ChangeLog,v 1.66 2007/05/07 08:24:01 masterdriverz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kscd/ChangeLog,v 1.67 2007/05/07 13:58:55 masterdriverz Exp $
+
+  07 May 2007; Charlie Shepherd <masterdriverz@gentoo.org>
+  files/kscd-3.5.6-arts.patch:
+  Fix arts patch; bug 177445
 
 *kscd-3.5.6-r1 (07 May 2007)
 
