--- a/sys-kernel/gentoo-sources/ChangeLog
+++ b/sys-kernel/gentoo-sources/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-kernel/gentoo-sources
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.392 2007/05/06 15:05:55 dsd Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.393 2007/05/07 14:38:20 gustavoz Exp $
+
+  07 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
+  gentoo-sources-2.6.20-r8.ebuild:
+  Stable on sparc
 
   06 May 2007; Daniel Drake <dsd@gentoo.org>
   gentoo-sources-2.6.20-r8.ebuild:
