--- a/app-admin/python-updater/ChangeLog
+++ b/app-admin/python-updater/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/python-updater
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/python-updater/ChangeLog,v 1.4 2007/05/07 09:26:13 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/python-updater/ChangeLog,v 1.5 2007/05/07 16:39:01 jer Exp $
+
+  07 May 2007; Jeroen Roovers <jer@gentoo.org> python-updater-0.2.ebuild:
+  Marked ~hppa (bug #177270).
 
 *python-updater-0.2 (07 May 2007)
 
