--- a/net-im/openfire/ChangeLog
+++ b/net-im/openfire/ChangeLog
@@ -1,6 +1,6 @@
-# ChangeLog for net-im/wildfire
+# ChangeLog for net-im/openfire
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/openfire/ChangeLog,v 1.1 2007/05/07 02:16:39 humpback Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/openfire/ChangeLog,v 1.2 2007/05/07 19:40:27 swegener Exp $
 
   07 May 2007; <humpback@gentoo.org> +files/buildxml-3.3.0.patch,
   +files/conf.d/openfire, +files/init.d/openfire, +metadata.xml:
