--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for profile directory
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.364 2007/05/07 20:59:06 genstef Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/profiles/cvs-repo/gentoo-x86/profiles/ChangeLog,v 1.365 2007/05/07 21:24:40 genstef Exp $
+
+  07 May 2007; Stefan Schweizer <genstef@gentoo.org> package.mask:
+  Add new alsa-lib version-r1 to IUSE_PCM_PLUGIN masking
 
   07 May 2007; Stefan Schweizer <genstef@gentoo.org> package.mask:
   mask new alsa
